# AvaSYS-GCS-Revised

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/core/: AppContext.cpp  AppContext.h  Vehicle.cpp  Vehicle.h  VideoItem.cpp  VideoItem.h
src/horizon/: linearindicator.cpp
src/managers/: MavlinkManager.cpp  MavlinkManager.h  TeknofestClient.cpp  TeknofestClient.h  VehicleManager.cpp  VehicleManager.h
src/network/: HttpClient.cpp  HttpClient.h
src/teknofest/: TeknofestAuthProperty.h  TeknofestHSSProperty.h  TeknofestQRCodeProperty.h  TeknofestServerProperty.h
ui/: Main.qml
ui/components/: CompassGauge.qml  RightPanel.qml  StyledGauge.qml
ui/horizon/: ArtificialHorizon.qml  HorizonPanel.qml  TickMark.qml
ui/panels/: BottomPanel.qml  MainPanel.qml  SelectionPanel.qml  VideoPanel.qml
ui/settings/: SettingsWindow.qml
